# apps/backend/app/db/models/character.py
@@ -10,10 +10,11 @@ class Character(Base):
     id = Column(Integer, primary_key=True)
     name = Column(String(80), nullable=False)
     class_name = Column(String(50), nullable=False)
-    player_id = Column(Integer, ForeignKey('players.id'), nullable=False)
+    player_id = Column(Integer, ForeignKey('players.id'), nullable=True)
+    server = Column(String(100))
+    region = Column(String(32))
     specializations = relationship('Specialization', backref='character', lazy=True)
     mainAlt = Column(Boolean, default=False)
 
     def __repr__(self) -> str:
         return f'<Character {self.name}>'
-
